@@ -149,8 +149,6 @@ class Net::SSLeay::SSL_CTX : pointer {
   
   native method set_tlsext_servername_callback : long ($cb : Net::SSLeay::Callback::TlsextServername, $arg : object = undef);
   
-  native method set_tlsext_status_cb : long ($cb : Net::SSLeay::Callback::TlsextStatus, $arg : object = undef);
-  
   native method set_psk_client_callback : void ($cb : Net::SSLeay::Callback::PskClient);
   
   native method set_psk_server_callback : void ($cb : Net::SSLeay::Callback::PskServer);
